--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body {
   background-color: #FFFCEF;
 }
 img {
-  max-width:100%;
+  max-width: 100%;
 }
 h1 {
   font-weight: lighter;
@@ -82,6 +82,7 @@ h1 {
 }
 
 </style>
+<link rel="shortcut icon" type="image/png" href="public/favicon.png"/>
 </head>
 <body>
 <div class="container">
