--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ h1 {
             </a>
           </span>
           <span class="link-wrapper">
-            <a href="https://github.com/bigboiyeh" target="_blank" rel="noopener noreferrer">
+            <a href="https://github.com/rsyeh" target="_blank" rel="noopener noreferrer">
               <img src="public/github-icon.png" alt="githubIcon" />
             </a>
         </span>
